css/main.css
/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */
* {
  padding: 0;
  margin: 0;
  font-style: normal;
  font-family: 'Raleway', sans-serif;
  font-weight:400;
}

html, body {
    position:relative;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    color: #222;
    font-size: 1em;
    line-height: 1.4;
    background: rgb(28,191,212);
    background: -moz-linear-gradient(45deg, rgba(28,191,212,1) 0%, rgba(0,168,142,1) 100%);
    background: -webkit-linear-gradient(45deg, rgba(28,191,212,1) 0%,rgba(0,168,142,1) 100%);
    background: linear-gradient(45deg, rgba(28,191,212,1) 0%,rgba(0,168,142,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1cbfd4', endColorstr='#00a88e',GradientType=1 );
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}
main {
  display:flex;
  -webkit-display: flex;
  flex-flow: column;
  flex-wrap:wrap;
  height: 100%;
  width: 50vw;
  margin: 0 auto;
  padding-top: 10%;
  box-sizing: border-box;
}

h1, h1 span, h2{
  color: #ffffff;
  font-style: italic;
  font-weight: 900;
  text-transform: uppercase;
  margin:0;
}

h1 {
    order: 1;
    display: block;
    font-size: 17vw;
    line-height: .9;
}

.name-first{
    padding-left: 1.5vw;
}

.name-last{
  display:block;
}

.name-last span {
  display: block;
}


h2 {
    order: 2;
    align-content: top;
    display: block;
    z-index: 5;
    font-size: 7vw;
    text-align: left;
}

.image-zak {
    display: block;
    position: absolute;
    bottom: 0px;
    right: 0px;
    width: 52vw;
    height: 95%;
    background: url("../img/zak.png") no-repeat -30% bottom;
    background-size: cover;
    order: 3;
    z-index: 2;
}

.body-copy {
  order: 3;
  color: #ffffff;
  margin-top: 2rem;
  z-index: 10;
}

.cta {
    order: 5;
    margin-top: 3rem;
    padding-right: 15vw;
    z-index: 10;
}

.btn {
    box-sizing: border-box;
    width: 100%;
    display: inline-block;
    margin-right: 5%;
    margin-bottom: 1rem;
    background: rgba(255, 255, 255, 0.65);
    color: #000000;
    text-decoration: none;
    padding: 1rem;
    text-align: center;
    transition: background .25s ease-in-out;
    -webkit-transition: background .25s ease-in-out;
}

.btn-primary {
    background: rgba(255, 255, 255, 0.8);
}

.btn:hover {
    background: rgba(255, 255, 255, 1);
}

footer {
    display: flex;
    -webkit-display: flex;
    flex-wrap: wrap;
    flex: 4 0 auto;
    order: 6;
    align-items: flex-end;
    align-content: flex-end;
    color: #ffffff;
    z-index: 10;
    padding-bottom:1.5rem;
}

footer p {
    margin-bottom: 0.15rem;
    font-weight: 600;
    flex: 2 0 100%;
}


footer a {
  margin: 0 .5rem;
  color: #ffffff;
  transition: color .25s ease-in-out;
  -webkit-transition: color .25s ease-in-out;
}

footer a:first-child {
  margin-left:0;
}

footer a:hover {
  color:#000000;
}



/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

















/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    -webkit-clip-path: inset(50%);
    clip-path: inset(50%);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    -webkit-clip-path: none;
    clip-path: none;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */
@media only screen and (max-width: 30em) {
  main {
    width:80vw;
  }
  .image-zak {
    width: 70vw;
    background: url(../img/zak.png) no-repeat 1.25rem 0rem;
    background-size: cover;
  }
  footer p, footer a {
    font-size: .8rem;
  }
}

@media only screen and (min-width: 40em) {
    /* Style adjustments for viewports that meet the condition */
    main {
      height: 80vh;
      width: 50vw;
      padding-top: 20vh;
      box-sizing: initial;
    }

    h1 {
        font-size: 7vw;
        line-height: .9;
        margin-top: 2.5vh;
    }

    .name-first{
        padding-left: 1.5vw;
    }

    .name-last{
      display:block;
    }

    .name-last span {
      display: inline;
    }
    h2 {
        font-size: 3vw;
        text-align: left;
        padding-left: 16vw;
    }

    .image-zak {
        width: 52vw;
        height: 80%;
        background: url("../img/zak.png") no-repeat 25% bottom;
        background-size: contain;
    }
    .cta {
        margin-top: 3rem;
    }
    .btn {
        width: 40%;
        margin-right: 5%;
    }
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

